package hbase.pb;

option java_package="zx.soft.hbase.api.endpoint";
option java_outer_classname="DailyCountProtos";
option java_generic_services=true;
option java_generate_equals_and_hash=true;
option optimize_for=SPEED;

message CountRequest{
}

message CountResponse{
 required int64 count=1[default=0];
}

service DailyCountService{
rpc getDailyCount(CountRequest)
    returns (CountResponse);
rpc getKeyValueCount(CountRequest)
    returns (CountResponse);
}